--- a/index.html
+++ b/index.html
@@ -1,44 +1,158 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Pizza</title>
+    <title>Hello Pizza</title>
 </head>
+
 <body>
-     <header>
+    <header>
         <div>
-            <a href="#">La Pizza</a>
+            <a href="#">Hello Pizza</a>
             <nav>
                 <a href="#sobre">sobre</a>
                 <a href="#cardapio">cardapio</a>
                 <a href="#contato">contato</a>
+
             </nav>
         </div>
 
-     </header>
-     <main>
+    </header>
+    <main>
         <section id="sobre">
             <div>
                 <div>
-                    <h1>La Pizza - sobre</h1>
-                    <p>Surgimos em 1987 e desde já somos considerados a melhor pizzaria da região</p>
+                    <h1>Hello Pizza - sobre</h1>
+                    <p>Surgimos em 2005 e desde já somos considerados a melhor pizzaria da região!
+                        Nossa empresa procura trazer uma estética suave e fofa, que atrai o apetite de quem vê. 
+                    </p>
                 </div>
                 <figure>
-                    <img src="img/pizzaSobre.jpg" width="600" height="450" alt="pizza do la Pizza">
+                    <img src="img/hello.jpg" width="600" height="520" alt="pizza Hello Pizza">
                 </figure>
             </div>
         </section>
         <section id="cardapio">
-            <h1>blablabla</h1>
+            <div>
+                <!--salgadas-->
+                <h1>pizzas salgadas!</h1>
+                <div>
+                    <!--ITEM 1-->
+                    <article>
+                        <figure>
+                            <img src="img/4queijos.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            alt="pizza, queijo, quatro queijos.">
+                        </figure>
+                        <h3>Pizza Quatro queijos:</h3>
+                        <p>Molho de tomate, tomate, azeitona, cebola, Mozzarella, Parmesão, Cheddar e Catupiry.</p>
+                        <span>R$ 35,90.</span>
+                    </article>
+                    <!--ITEM 2-->
+                    <article>
+                        <figure>
+                            <img src="img/calabresa.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            alt="linguiça, calabresa, pizza de calabresa">
+                        </figure>
+                        <h3>Pizza de Calabresa:</h3>
+                        <p>Molho de tomate, Mozzarella e calabresa picada, cebola, azeitona roxa e oregano.</p>
+                        <span>R$ 40,00.</span>
+                    </article>
+                    <!--ITEM 3-->
+                    <article>
+                        <figure>
+                            <img src="img/brocolis.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            alt="blocolis, pizza, pizza de brocolis">
+                        </figure>
+                        <h3>Pizza de Brócolis;</h3>
+                        <p>Molho branco, cebola picada, brócolis e tomate picado fresco.</p>
+                        <span>R$ 32,80.</span>
+                    </article>
+                    <!--ITEM 3-->
+                    <article>
+                        <figure>
+                            <img src="img/camarao.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            alt="crustáceo, camarao, pizza de camarao">
+                        </figure>
+                        <h3>Pizza de Camarão com Polvo;</h3>
+                        <p>Molho tarô, shoyu, camarão, cheddar, .</p>
+                        <span>R$ 32,80.</span>
+                    </article>
+                </div>
+                <!--doces-->
+                <h1>pizzas doces!</h1>
+                <div>
+                    <!--ITEM 1-->
+                    <article>
+                        <figure>
+                            <img src="img/ninho.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            alt="ninho, morango, pizza de ninho com morango">
+                        </figure>
+                        <h3>Pizza Ninho com Morango:</h3>
+                        <p>Morangos frescos, creme de ninho, brigadeiros de ninho e calda de morango.</p>
+                        <span>R$ 35,90.</span>
+                    </article>
+                    <!--ITEM 2-->
+                    <article>
+                        <figure>
+                            <img src="img/brigadeiro.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            alt="brigadeiro, frutas, pizza de brigadeiro com frutas">
+                        </figure>
+                        <h3>Pizza de Brigadeiro com frutas:</h3>
+                        <p>creme de chocolate, banana, moranho, uva e granulado.</p>
+                        <span>R$ 40,00.</span>
+                    </article>
+                    <!--ITEM 3-->
+                    <article>
+                        <figure>
+                            <img src="img/kiwi.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            alt="kiwi, morango, chocolate, pizza de kiwi">
+                        </figure>
+                        <h3>Pizza de Kiwi com chocolate e morango:</h3>
+                        <p>creme de chocolate, kiwi picado granulado colorido e morando.</p>
+                        <span>R$ 60,80.</span>
+                    </article>
+                    <!--ITEM 4-->
+                    <article>
+                        <figure>
+                            <img src="img/pistache.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            alt="pistache, pizza de pistache">
+                        </figure>
+                        <h3>Pizza de Pistache:</h3>
+                        <p>Creme de pistache, amendoa e chocolate.</p>
+                        <span>R$ 40,80.</span>
+                    </article>
+                </div>
+                <div>
         </section>
         <section id="contato">
-            <h1>txt :p</h1>
+            <div>
+                <h2>Fale com a gente!</h2>
+                <h4>ENDEREÇO: Vila dos Lírios, Mauá-SP</h4>
+                <form>
+                    <label>
+                        Nome
+                        <input type="text" placeholder="digite aqui seu nome! 🤭"
+                        name="nome" required>
+                    </label>
+                    <label >
+                        Telefone:
+                        <input type="tel" placeholder="(11) 91111-1111" name="telefone" required/>
+                    </label>
+                    <label>
+                        mensagem:
+                        <textarea name="mensagem" placeholder="Deixe sua mensagem!!!😸"></textarea>
+                    </label>
+                    <input type="submit">
+                </form>
+            </div>
 
         </section>
-     </main>
+    </main>
 
 
-    
+
 </body>
+
 </html>
