--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Pizza</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,7 +36,7 @@
                     </p>
                 </div>
                 <figure>
-                    <img src="img/hello.jpg" width="600" height="520" alt="pizza Hello Pizza">
+                    <img src="img/KITTY.png" width="600" height="520" alt="pizza Hello Pizza">
                 </figure>
             </div>
         </section>
@@ -147,12 +153,32 @@
                     <input type="submit">
                 </form>
             </div>
+            <div>
+                <h3>Onde estamos</h3>
+                <p>Rua Américo de Campos, 118 - Liberdade, São Paulo - SP
+                    <strong>Abertos de segunda a sexta</strong> 09h às 17h
+                </p>
+                <figure>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.311536340424!2d-46.637328724670034!3d-23.557252078802687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59200e5ccf1b%3A0x2adc8f32d26d4ee3!2sHello%20Kitty%20and%20Friends%202d%20by%20Eat%20Asia!5e0!3m2!1spt-BR!2sbr!4v1758977256392!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                </figure>
+
+            </div>
 
         </section>
     </main>
-
-
-
+    <footer>
+        <div>
+            <small>
+                ©
+                <strong>2025</strong>
+                Hello Pizza - Fofura e apetite
+            </small>
+            <a href="#">
+                ↑↑↑ Home
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
