--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello Pizza</title>
 
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <div>
-            <a href="#">Hello Pizza</a>
+    <header class="topbar">
+        <div class="container row">
+            <a class="logo" href="#">🍕😻Hello Pizza😸🍕</a>
             <nav>
                 <a href="#sobre">sobre</a>
                 <a href="#cardapio">cardapio</a>
@@ -27,16 +26,16 @@
 
     </header>
     <main>
-        <section id="sobre">
-            <div>
-                <div>
-                    <h1>Hello Pizza - sobre</h1>
+        <section class="hero" id="sobre">
+            <div class="container hero-wrap">
+                <div class="hero-text">
+                    <h1>Hello Pizza</h1>
                     <p>Surgimos em 2005 e desde já somos considerados a melhor pizzaria da região!
                         Nossa empresa procura trazer uma estética suave e fofa, que atrai o apetite de quem vê. 
                     </p>
                 </div>
-                <figure>
-                    <img src="img/KITTY.png" width="600" height="520" alt="pizza Hello Pizza">
+                <figure class="hero-img">
+                    <img src="img/foto.png" width="380" height="320" alt="pizza Hello Pizza">
                 </figure>
             </div>
         </section>
@@ -48,7 +47,7 @@
                     <!--ITEM 1-->
                     <article>
                         <figure>
-                            <img src="img/4queijos.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            <img src="img/4queijos.jpg" width="250" height="250" alt="pizza do Hello Pizza"
                             alt="pizza, queijo, quatro queijos.">
                         </figure>
                         <h3>Pizza Quatro queijos:</h3>
@@ -58,7 +57,7 @@
                     <!--ITEM 2-->
                     <article>
                         <figure>
-                            <img src="img/calabresa.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            <img src="img/calabresa.jpg" width="200" height="250" alt="pizza do Hello Pizza"
                             alt="linguiça, calabresa, pizza de calabresa">
                         </figure>
                         <h3>Pizza de Calabresa:</h3>
@@ -68,7 +67,7 @@
                     <!--ITEM 3-->
                     <article>
                         <figure>
-                            <img src="img/brocolis.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            <img src="img/brocolis.jpg" width="200" height="250" alt="pizza do Hello Pizza"
                             alt="blocolis, pizza, pizza de brocolis">
                         </figure>
                         <h3>Pizza de Brócolis;</h3>
@@ -78,7 +77,7 @@
                     <!--ITEM 3-->
                     <article>
                         <figure>
-                            <img src="img/camarao.jpg" width="200" height="150" alt="pizza do Hello Pizza"
+                            <img src="img/camarao.jpg" width="200" height="250" alt="pizza do Hello Pizza"
                             alt="crustáceo, camarao, pizza de camarao">
                         </figure>
                         <h3>Pizza de Camarão com Polvo;</h3>
@@ -92,7 +91,7 @@
                     <!--ITEM 1-->
                     <article>
                         <figure>
-                            <img src="img/ninho.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            <img src="img/ninho.jpg" width="200" height="250" alt="pizza do la Pizza"
                             alt="ninho, morango, pizza de ninho com morango">
                         </figure>
                         <h3>Pizza Ninho com Morango:</h3>
@@ -102,7 +101,7 @@
                     <!--ITEM 2-->
                     <article>
                         <figure>
-                            <img src="img/brigadeiro.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            <img src="img/brigadeiro.jpg" width="250" height="250" alt="pizza do la Pizza"
                             alt="brigadeiro, frutas, pizza de brigadeiro com frutas">
                         </figure>
                         <h3>Pizza de Brigadeiro com frutas:</h3>
@@ -112,7 +111,7 @@
                     <!--ITEM 3-->
                     <article>
                         <figure>
-                            <img src="img/kiwi.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            <img src="img/kiwi.jpg" width="250" height="250" alt="pizza do la Pizza"
                             alt="kiwi, morango, chocolate, pizza de kiwi">
                         </figure>
                         <h3>Pizza de Kiwi com chocolate e morango:</h3>
@@ -122,7 +121,7 @@
                     <!--ITEM 4-->
                     <article>
                         <figure>
-                            <img src="img/pistache.jpg" width="200" height="150" alt="pizza do la Pizza"
+                            <img src="img/pistache.jpg" width="250" height="250" alt="pizza do la Pizza"
                             alt="pistache, pizza de pistache">
                         </figure>
                         <h3>Pizza de Pistache:</h3>
