--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="topbar">
         <div class="container row">
-            <a class="logo" href="#">🍕😻Hello Pizza😸🍕</a>
+            <a class="logo" href="#">🍕😻Hello Pizza!😸🍕</a>
             <nav>
                 <a href="#sobre">sobre</a>
                 <a href="#cardapio">cardapio</a>
@@ -25,6 +25,7 @@
         </div>
 
     </header>
+
     <main>
         <section class="hero" id="sobre">
             <div class="container hero-wrap">
@@ -35,103 +36,106 @@
                     </p>
                 </div>
                 <figure class="hero-img">
-                    <img src="img/foto.png" width="380" height="320" alt="pizza Hello Pizza">
+                    <img src="img/foto.png" width="580" height="520" alt="pizza Hello Pizza">
                 </figure>
             </div>
         </section>
-        <section id="cardapio">
+
+        <section class="section-margin" id="cardapio">
             <div>
                 <!--salgadas-->
                 <h1>pizzas salgadas!</h1>
-                <div>
+                <div class="menu-grid">
                     <!--ITEM 1-->
-                    <article>
-                        <figure>
-                            <img src="img/4queijos.jpg" width="250" height="250" alt="pizza do Hello Pizza"
-                            alt="pizza, queijo, quatro queijos.">
+                    <article class="item">
+                        <figure class="thumb">
+                            <img src="img/4queijos.jpg" width="250" height="250" alt="pizza, queijo, quatro queijos.">
                         </figure>
                         <h3>Pizza Quatro queijos:</h3>
                         <p>Molho de tomate, tomate, azeitona, cebola, Mozzarella, Parmesão, Cheddar e Catupiry.</p>
-                        <span>R$ 35,90.</span>
+                        <span class="price">R$ 35,90.</span>
                     </article>
+
                     <!--ITEM 2-->
-                    <article>
-                        <figure>
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/calabresa.jpg" width="200" height="250" alt="pizza do Hello Pizza"
                             alt="linguiça, calabresa, pizza de calabresa">
                         </figure>
                         <h3>Pizza de Calabresa:</h3>
                         <p>Molho de tomate, Mozzarella e calabresa picada, cebola, azeitona roxa e oregano.</p>
-                        <span>R$ 40,00.</span>
+                        <span class="price">R$ 38,00.</span>
                     </article>
+
                     <!--ITEM 3-->
-                    <article>
-                        <figure>
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/brocolis.jpg" width="200" height="250" alt="pizza do Hello Pizza"
                             alt="blocolis, pizza, pizza de brocolis">
                         </figure>
                         <h3>Pizza de Brócolis;</h3>
                         <p>Molho branco, cebola picada, brócolis e tomate picado fresco.</p>
-                        <span>R$ 32,80.</span>
+                        <span class="price">R$ 32,80.</span>
                     </article>
-                    <!--ITEM 3-->
-                    <article>
-                        <figure>
+
+                    <!--ITEM 4-->
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/camarao.jpg" width="200" height="250" alt="pizza do Hello Pizza"
                             alt="crustáceo, camarao, pizza de camarao">
                         </figure>
                         <h3>Pizza de Camarão com Polvo;</h3>
                         <p>Molho tarô, shoyu, camarão, cheddar, .</p>
-                        <span>R$ 32,80.</span>
+                        <span class="price">R$ 50,80.</span>
                     </article>
                 </div>
                 <!--doces-->
                 <h1>pizzas doces!</h1>
-                <div>
+                <div class="menu-grid">
                     <!--ITEM 1-->
-                    <article>
-                        <figure>
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/ninho.jpg" width="200" height="250" alt="pizza do la Pizza"
                             alt="ninho, morango, pizza de ninho com morango">
                         </figure>
                         <h3>Pizza Ninho com Morango:</h3>
                         <p>Morangos frescos, creme de ninho, brigadeiros de ninho e calda de morango.</p>
-                        <span>R$ 35,90.</span>
+                        <span class="price">R$ 35,90.</span>
                     </article>
                     <!--ITEM 2-->
-                    <article>
-                        <figure>
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/brigadeiro.jpg" width="250" height="250" alt="pizza do la Pizza"
                             alt="brigadeiro, frutas, pizza de brigadeiro com frutas">
                         </figure>
                         <h3>Pizza de Brigadeiro com frutas:</h3>
                         <p>creme de chocolate, banana, moranho, uva e granulado.</p>
-                        <span>R$ 40,00.</span>
+                        <span class="price">R$ 40,00.</span>
                     </article>
                     <!--ITEM 3-->
-                    <article>
-                        <figure>
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/kiwi.jpg" width="250" height="250" alt="pizza do la Pizza"
                             alt="kiwi, morango, chocolate, pizza de kiwi">
                         </figure>
                         <h3>Pizza de Kiwi com chocolate e morango:</h3>
                         <p>creme de chocolate, kiwi picado granulado colorido e morando.</p>
-                        <span>R$ 60,80.</span>
+                        <span class="price">R$ 60,80.</span>
                     </article>
                     <!--ITEM 4-->
-                    <article>
-                        <figure>
+                    <article class="item">
+                        <figure class="thumb">
                             <img src="img/pistache.jpg" width="250" height="250" alt="pizza do la Pizza"
                             alt="pistache, pizza de pistache">
                         </figure>
                         <h3>Pizza de Pistache:</h3>
                         <p>Creme de pistache, amendoa e chocolate.</p>
-                        <span>R$ 40,80.</span>
+                        <span class="price">R$ 40,80.</span>
                     </article>
                 </div>
                 <div>
         </section>
-        <section id="contato">
+        <section  class="section-margin contact-grid" id="contato">
             <div>
                 <h2>Fale com a gente!</h2>
                 <h4>ENDEREÇO: Vila dos Lírios, Mauá-SP</h4>
@@ -149,7 +153,7 @@
                         mensagem:
                         <textarea name="mensagem" placeholder="Deixe sua mensagem!!!😸"></textarea>
                     </label>
-                    <input type="submit">
+                    <input type="submit" class="btn">
                 </form>
             </div>
             <div>
