--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-        <section class="hero" id="sobre">
+        <section class="hero section" id="sobre">
             <div class="container hero-wrap">
                 <div class="hero-text">
                     <h1>Hello Pizza</h1>
@@ -158,10 +158,10 @@
             </div>
             <div>
                 <h3>Onde estamos</h3>
-                <p>Rua Américo de Campos, 118 - Liberdade, São Paulo - SP
+                <p>c
                     <strong>Abertos de segunda a sexta</strong> 09h às 17h
                 </p>
-                <figure>
+                <figure class="mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.311536340424!2d-46.637328724670034!3d-23.557252078802687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59200e5ccf1b%3A0x2adc8f32d26d4ee3!2sHello%20Kitty%20and%20Friends%202d%20by%20Eat%20Asia!5e0!3m2!1spt-BR!2sbr!4v1758977256392!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </figure>
@@ -171,7 +171,7 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="container">
             <small>
                 ©
                 <strong>2025</strong>
